* Gtk.Forms.sln: * Gtk.Forms/objects.xml: * Gtk.Forms/Gtk.Forms.csproj: * Gtk.Forms/Widgets/FormsGridView.cs: * Gtk.Forms/Decorators/GridViewDecorator.cs: * examples/GridViewBinding/gtk-gui/gui.stetic: * examples/GridViewBinding/gtk-gui/generated.cs: * examples/GridViewBinding/gtk-gui/MainWindow.cs: * examples/LabelEntryBinding/gtk-gui/generated.cs: * examples/GridViewBinding/GridViewBinding.csproj: * examples/LabelEntryBinding/gtk-gui/MainWindow.cs: * examples/LabelEntryBinding/ComboBoxBinding/gtk-gui/generated.cs: * examples/LabelEntryBinding/ComboBoxBinding/gtk-gui/MainWindow.cs:

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-04-20  Krzysztof Marecki  <marecki.krzysztof@gmail.com>
+
+	* Gtk.Forms.sln: 
+
 2010-04-09  Krzysztof Marecki  <marecki.krzysztof@gmail.com>
 
 	* examples:
