--- a/Gtk.Forms/ChangeLog
+++ b/Gtk.Forms/ChangeLog
@@ -1,3 +1,8 @@
+2010-04-20  Krzysztof Marecki  <marecki.krzysztof@gmail.com>
+
+	* objects.xml:
+	* Gtk.Forms.csproj: 
+
 2010-04-09  Krzysztof Marecki  <marecki.krzysztof@gmail.com>
 
 	* Widgets:
