--- a/examples/LabelEntryBinding/gtk-gui/ChangeLog
+++ b/examples/LabelEntryBinding/gtk-gui/ChangeLog
@@ -1,3 +1,8 @@
+2010-04-20  Krzysztof Marecki  <marecki.krzysztof@gmail.com>
+
+	* generated.cs:
+	* MainWindow.cs: 
+
 2010-04-09  Krzysztof Marecki  <marecki.krzysztof@gmail.com>
 
 	* ChangeLog:
