--- a/trunk/Gtk.Forms/ChangeLog
+++ b/trunk/Gtk.Forms/ChangeLog
@@ -1,3 +1,7 @@
+2010-04-22  Krzysztof Marecki  <marecki.krzysztof@gmail.com>
+
+	* objects.xml: 
+
 2010-04-20  Krzysztof Marecki  <marecki.krzysztof@gmail.com>
 
 	* objects.xml:
