Started implementing validation mechanism. Using signal filtering to ensure that not validated widget will not loose the focus and to disable not focused widgets.
* Gtk.Forms/objects.xml:
* Gtk.Forms/Widgets/FormsWindow.cs:
* examples/GridViewBinding/MainWindow.cs:
* Gtk.Forms/Decorators/WidgetDecorator.cs:  
* Gtk.Forms/Decorators/WindowDecorator.cs:
* examples/GridViewBinding/gtk-gui/gui.stetic:
* examples/GridViewBinding/gtk-gui/generated.cs:
* examples/GridViewBinding/gtk-gui/MainWindow.cs:
* examples/LabelEntryBinding/gtk-gui/generated.cs:
* examples/LabelEntryBinding/gtk-gui/MainWindow.cs:
* examples/LabelEntryBinding/ComboBoxBinding/gtk-gui/generated.cs:
* examples/LabelEntryBinding/ComboBoxBinding/gtk-gui/MainWindow.cs:

--- a/Gtk.Forms/ChangeLog
+++ b/Gtk.Forms/ChangeLog
@@ -1,3 +1,7 @@
+2010-04-22  Krzysztof Marecki  <marecki.krzysztof@gmail.com>
+
+	* objects.xml: 
+
 2010-04-20  Krzysztof Marecki  <marecki.krzysztof@gmail.com>
 
 	* objects.xml:
