--- a/examples/GridViewBinding/ChangeLog
+++ b/examples/GridViewBinding/ChangeLog
@@ -1,3 +1,7 @@
+2010-04-22  Krzysztof Marecki  <marecki.krzysztof@gmail.com>
+
+	* MainWindow.cs: 
+
 2010-04-20  Krzysztof Marecki  <marecki.krzysztof@gmail.com>
 
 	* GridViewBinding.csproj: 
