--- a/trunk/examples/LabelEntryBinding/ComboBoxBinding/gtk-gui/ChangeLog
+++ b/trunk/examples/LabelEntryBinding/ComboBoxBinding/gtk-gui/ChangeLog
@@ -1,3 +1,8 @@
+2010-04-26  Krzysztof Marecki  <christopherm7@gmail.com>
+
+	* generated.cs:
+	* MainWindow.cs: 
+
 2010-04-22  Krzysztof Marecki  <marecki.krzysztof@gmail.com>
 
 	* generated.cs:
