* Gtk.Forms\Decorators\WindowDecorator.cs: * Gtk.Forms\Decorators\WidgetDecorator.cs: * examples\GridViewBinding\gtk-gui\generated.cs: * examples\GridViewBinding\gtk-gui\MainWindow.cs: * examples\LabelEntryBinding\gtk-gui\generated.cs: * examples\LabelEntryBinding\gtk-gui\MainWindow.cs: * examples\LabelEntryBinding\ComboBoxBinding\gtk-gui\generated.cs: * examples\LabelEntryBinding\ComboBoxBinding\gtk-gui\MainWindow.cs:

--- a/Gtk.Forms/Decorators/ChangeLog
+++ b/Gtk.Forms/Decorators/ChangeLog
@@ -1,3 +1,9 @@
+2010-04-26  Krzysztof Marecki  <christopherm7@gmail.com>
+
+	* WindowDecorator.cs: Handled Delete event to supress window closing
+
+	* WidgetDecorator.cs: Validation handles ButtonPress
+
 2010-04-22  Krzysztof Marecki  <marecki.krzysztof@gmail.com>
 
 	* WindowDecorator.cs:
